// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correct process dynamic placet 1`] = `
Object {
  "Constructor": "dummy",
  "Options": Object {
    "ID": "component",
    "withWrapper": false,
  },
  "html": "
<h1>Title</h1>
<div>Content for dummy component</div>
<!--ActivePageContainer-->
<!--if-->
",
}
`;

exports[`correct process dynamic placet 2`] = `
Object {
  "Constructor": "dummy",
  "Options": Object {
    "ID": "component",
    "withWrapper": true,
  },
  "html": "
<div class=\\"wrapper\\">
  <h1>Title</h1>
  <div>Content for dummy component</div>
</div>
<!--if-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "ActivePageContainer",
  "Options": Object {
    "ID": "component",
    "routerData": Object {
      "activePageComponent": [Function],
      "activePageOptions": Object {
        "path": "base",
        "text": "Base page",
      },
      "url": "",
    },
  },
  "html": "
<h1>Title</h1>
<div>Content for dummy component</div>
",
}
`;
